--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ background-color: rgb(252, 239, 255);
   padding:5px;
   border:2px solid rgba(76, 76, 76, 0.442);
   border-radius: 5px;
-  box-shadow: 10 15 rgb(255, 0, 43) ,0 18 rgba(0,0,0,0.4);
+  box-shadow: 0 12px rgb(255, 232, 232),0 18px rgba(0, 0, 0, 0.079);
   font-size: 60px;
   width:90px;
   height:80px;
@@ -25,4 +25,19 @@ background-color: rgb(252, 239, 255);
   position:relative;
   top:0;
   
+}
+.btn.disabled{
+  cursor: defualt;
+}
+.btn.disabled:hover{
+  top:0;
+  background: #535353;
+  color:pink;
+  box-shadow: 0 12px pink ,0 18px rgba(0,0,0,0.4);
+
+}
+.btn:hover{
+  background-color: rgb(255, 255, 255);
+  color:rgb(255, 132, 251);
+  top:4px;
 }
